api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
spec:
  selector:
    app: webapi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
