ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digisense-microservices
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: admin-portal-svc
            servicePort: 8001
        - path: /webapi/*
          backend:
            serviceName: webapi-svc
            servicePort: 8001
